# crudadmin

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  README.md  SECURITY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  zensical.toml
.github/workflows/: docs.yml  linting.yml  tests.yml  type-check.yml
advanced/overview/: index.html
api/admin_site/: index.html
api/crud_admin/: index.html
api/events/: index.html
api/model_view/: index.html
api/overview/: index.html
api/session/: index.html
community/CODE_OF_CONDUCT/: index.html
community/CONTRIBUTING/: index.html
community/LICENSE/: index.html
community/overview/: index.html
crudadmin/: __init__.py
crudadmin/admin/: crud_admin.py  helper.py
crudadmin/admin_interface/: admin_site.py  auth.py  crud_admin.py  helper.py  model_view.py  relationships.py  typing.py
crudadmin/admin_token/: models.py  service.py
crudadmin/admin_user/: __init__.py  models.py  schemas.py  service.py
crudadmin/authentication/: admin_auth.py  security.py
crudadmin/core/: __init__.py  db.py
crudadmin/db/: database_config.py
crudadmin/event/: __init__.py  decorators.py  integration.py  models.py  schemas.py  service.py
crudadmin/models/: admin_user.py  (+1 more)
docs/: index.md  installing.md  quick-start.md
installing/: index.html
quick-start/: index.html
scripts/: deploy_crudadmin_service.sh  setup_crudadmin_app.sh
search/: search_index.json
tests/: conftest.py  test_admin_user_service.py  test_core_db.py  test_crud_admin.py  test_session_manager.py  test_version.py
(+101 files in other folders)
