[project]
name = "crudadmin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.2.1",
    "fastapi>=0.115.6",
    "fastcrud>=0.15.5",
    "greenlet>=3.1.1",
    "httptools>=0.6.4",
    "httpx>=0.28.1",
    "jinja2>=3.1.5",
    "pydantic-settings>=2.7.1",
    "pydantic[email]>=2.10.4",
    "pytest>=8.3.4",
    "python-jose>=3.3.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.36",
    "sqlalchemy-utils>=0.41.2",
    "uuid>=1.30",
]
